profiling-using-exp-runner/backup_FINAL_RESULTS/hanoi_experiment_2/run_6_repetition_0/energibridge.log
sampling interval: 200, target function: tower_of_hanoi, input size: 30
  File "<string>", line 1
    import sys; import os; import numpy as np; sys.path.append(/Users/rr/GreenLab/ProjectCode/profiling-using-exp-runner/packages); import recursive.hanoi as module; X = 30; module.tower_of_hanoi(X,A,C,B); 
                                                               ^
SyntaxError: invalid syntax
Energy consumption in joules: 10.527847206115721 for 0.23482709 sec of execution.
